Upudate scretch Logo and register button

--- a/src/app/i18n/locales/en.json
+++ b/src/app/i18n/locales/en.json
@@ -633,7 +633,7 @@
       "need_to_accept": "You need to accept the ",
       "terms_of_service": "Terms of Service",
       "to_continue": " in order to continue",
-      "sign_up": "Sign up",
+      "sign_up": "Register Auction",
       "lets_create_acc": "Let's create a new account",
       "email_placeholder": "Enter your email",
       "password_placeholder": "Set a password",
